various bug fixes
added preloadingStrategy attribute to pre load modules
added necessary row style to prevent horizontal scrolling

--- a/bpap-site/src/app/epk/epk.component.less
+++ b/bpap-site/src/app/epk/epk.component.less
@@ -16,7 +16,13 @@
 	background-color: black;
 }
 
+//fixes issue with info-text row being wider than body
+.row {
+	width: 100%;
+}
+
 #background {
+	overflow-x: hidden;
 	background-image: url('../../assets/img/background.jpg');
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
